# pipecat

./: Dockerfile  bot.py  pyproject.toml
